--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_USER: employee_user
       POSTGRES_PASSWORD: employee_password
+      POSTGRES_DB: employee_app
       PGDATA: /data/postgres
     volumes:
       - db:/data/postgres
