--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=employee-management-app
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_app
+spring.datasource.url=jdbc:postgresql://localhost:5332/employee_app
 spring.datasource.username=employee_user
 spring.datasource.password=employee_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8084
